# moos-ivp-boesen

./: .gitignore
lib/: libBHV_SimpleWaypoint.dylib
missions/lab_07/alpha/: alpha.moos  alpha.moos++
missions/lab_07/bravo_loiter/: bravo_loiter.bhv  bravo_loiter.moos  bravo_loiter.moos++  launch.sh
missions/lab_07/bravo_loiter_dbl/: bravo_loiter.moos++
missions/lab_07/bravo_loiter_uuv/: bravo_loiter.bhv  bravo_loiter.moos
missions/lab_07/bravo_uuv_surface/: bravo_loiter.bhv  bravo_loiter.moos
missions/lab_08/alpha_bravo_pshare/: all_launch.sh  alpha.moos  bravo.bhv  bravo.moos  shoreside.moos
missions/lab_08/alpha_pshare/: alpha.moos  shoreside.moos
missions/lab_08/henry_gilda_auto_refuel/: meta_shoreside.moos  (+1 more)
missions/lab_17/: assignment_a.md
missions/xrelay_pshare/: xrelay_apples.moos  xrelay_pears.moos
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/pCommunicationAngle/: CMakeLists.txt  CommunicationAngle.cpp  CommunicationAngle.h  CommunicationAngle_Info.cpp  CommunicationAngle_Info.h  main.cpp
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPrimeFactors/: CMakeLists.txt  PrimeFactors.cpp  PrimeFactors.h  PrimeFactors_Info.cpp  PrimeFactors_Info.h  PrimeProblem.cpp  PrimeProblem.h  main.cpp  pPrimeFactors.moos
src/uFldHazardMgrX/: CMakeLists.txt  HazardMgrX.cpp  HazardMgrX.h  HazardMgrX_Info.cpp  main.cpp
(+17 files in other folders)
